--- a/tools/package.json
+++ b/tools/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "argparse": "^2.0.1",
     "axios": "^0.26.0",
+    "cheerio": "^1.0.0-rc.10",
     "sqlite3": "^5.0.2"
   }
 }
